<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name">Фишлист</string>
    <string name="msg">Диаграмма Исикавы:</string>
    <string name="lbl_23">Задача 2</string>
    <string name="lbl_24">Ветка 2:</string>
    <string name="lbl_22">Цель 2</string>
    <string name="lbl4">Тёмная тема:</string>
    <string name="lbl5">Уведомления:</string>
    <string name="lbl2">Описание</string>
    <string name="lbl3">Настройки</string>
    <string name="msg_52">Через 5 минут наступит дедлайн выполения задачи №1!</string>
    <string name="lbl_12">Задача 1</string>
    <string name="lbl_13">Ветка 1:</string>
    <string name="lbl30">Добавить</string>
    <string name="lbl31">Изменить </string>
    <string name="msg22">Приоритет у веток 1 и 2 одинаковый! Выбериите ветку с наибольшим приоритетом.</string>
    <string name="lbl32">Дублировать</string>
    <string name="msg21">Потомков оставить, саму задачу сделать целью</string>
    <string name="lbl33">Сохранить</string>
    <string name="lbl">Мои цели</string>
    <string name="lbl34">Удаление ветки</string>
    <string name="msg23">Сохранить дочерние ветки</string>
    <string name="lbl35">Удалить всё</string>
    <string name="lbl_1">Цель 1</string>
    <string name="msg20">Переместить с потомками </string>
    <string name="msg15">Процент достижения задачи</string>
    <string name="msg14">Новая цель</string>
    <string name="msg17">Новая задача</string>
    <string name="msg16">Ваш процент достижения задачи составляет 75%</string>
    <string name="lbl20">Вид диаграммы</string>
    <string name="msg11">Добро пожаловать в "Фишлист"!\nМы поможем вам сфокусироваться и достичь ваших целей.</string>
    <string name="lbl21">Отмена</string>
    <string name="msg10">Включить уведомления вы можете в настройках</string>
    <string name="lbl22">Удалить</string>
    <string name="msg13">Сортируйте список дел по степени важности и  завершённости!\nСледите за процентом выполнения задач, он поможет оценить ваш прогресс.</string>
    <string name="lbl23">Изменить</string>
    <string name="msg12">Визуализируйте путь к намеченным целям с помощью диаграммы Исикавы!\nОна поможет разбить глобальные цели на более мелкие.</string>
    <string name="lbl24">Объединить</string>
    <string name="lbl25">Ваша цель</string>
    <string name="lbl26">Начать</string>
    <string name="lbl27">По завершённости:</string>
    <string name="lbl28">По дате дедлайна:</string>
    <string name="msg19">Изменение задачи</string>
    <string name="lbl29">Приоритет:</string>
    <string name="msg18">Вынести в отдельную цель</string>
    <string name="msg4">Выберите приоритет сортировки</string>
    <string name="msg3">Выберите по каким критериям вы бы хотели отсортировать скачиваемый список</string>
    <string name="msg2">Скачивание списка</string>
    <string name="msg8">Ваш процент достижения цели составляет 75%</string>
    <string name="lbl_75">0%</string>
    <string name="lbl_3_1">48</string>
    <string name="msg7">Процент достижения цели:</string>
    <string name="msg6">Вы уверены, что хотите удалить цель?</string>
    <string name="msg5">Скачать список  .docx</string>
    <string name="lbl_32">Задача 3</string>
    <string name="msg9">Система дедлайнов поможет вам грамотно распределить время на работу, а уведомления всегда напомнят о задачах!</string>
    <string name="lbl8">По важности:</string>
    <string name="lbl122">Без сортировки:</string>
    <string name="lbl6">Вид диаграммы</string>
    <string name="lbl_752">75</string>
    <string name="lbl7">Список:</string>
    <string name="lbl11">Важность</string>
    <string name="lbl12">Завершенность</string>
    <string name="lbl13">Скачать</string>
    <string name="lbl14">Сортировка</string>
    <string name="lbl15">Изменение цели</string>
    <string name="lbl16">Название:</string>
    <string name="lbl17">Дата дедлайна:</string>
    <string name="lbl18">Завершено:</string>
    <string name="lbl19">Описание:</string>
    <string name="lbl36">Применить</string>
    <string name="lbl37">Дальше</string>
    <string name="lbl40">Добавить</string>
    <string name="lbl41">По важности и дате дедлайна:</string>
    <string name="lbl42">Подсказки</string>
    <string name="help_card1_title">Создание цели</string>
    <string name="help_card1">Чтобы создать диаграмму для новой цели, нажмите на кнопку.</string>
    <string name="help_card2_title">Добавление задач</string>
    <string name="help_card2">Чтобы добавить задачу к цели, нажмите на нужную цель, а затем на кнопку.</string>
    <string name="help_card3_title">Редактирование данных</string>
    <string name="help_card3">Чтобы редактировать данные о задаче, вынести её в отдельную цель или удалить, нажмите на значок карандаша.</string>
    <string name="help_card4_title">Приоритеты</string>
    <string name="help_card4">У каждой цели и задачи можно установить приоритет: от 1, самого важного, до 12, самого незначительного.</string>
    <string name="help_card5_title">Процент выполнения</string>
    <string name="help_card5">В верхнем правом углу экрана выбранной цели можно посмотреть на сколько процентов она выполнена.</string>
    <string name="help_card6_title">Добавление подзадачи</string>
    <string name="help_card6">Чтобы добавить подзадачу к уже существующей задаче, нажмите на значок плюса.</string>
    <string name="help_card7_title">Просмотр подзадач</string>
    <string name="help_card7">Чтобы посмотреть подзадачи уже существующей задачи, нажмите на значок треугольника.</string>
    <string name="help_card8_title">Завершение задач</string>
    <string name="help_card8">Чтобы завершить задачу, зайдите в её изменение и отметьте задачу как выполненную.</string>
    <string name="help_card9_title">Сделать цель задачей</string>
    <string name="help_card9">При нажатии на кнопку "сделать задачей", выбранную цель можно будет сделать задачей уже существующей цели.</string>
    <string name="help_card10_title">Функции</string>
    <string name="help_card10">Чтобы изменить вид диаграммы, тип сортировки или скачать список текущих задач, нажмите на три точки в верхнем правом углу экрана и выберите нужный пункт.</string>
    <string name="help_card11_title">Цветовые обозначения приоритетов</string>
    <string name="help_card11_1">Приоритет с 1 по 4 обозначается цветом - </string>
    <string name="help_card11_2">Приоритет с 5 по 8 обозначается цветом - </string>
    <string name="help_card11_3">Приоритет с 9 по 12 обозначается цветом - </string>
    <string name="help_card12_title">Цветовое обозначение выполненной задачи</string>
    <string name="help_card12">Выполненная задача обозначается цветом - </string>


    <string name="default_priority_value">1</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="help_card_next">Продолжить</string>
    <string name="no_tasks">Пусто</string>
    <string name="help_screen_help_cards">Ознакомьтесь с инструкциями перед использованием приложения</string>
    <string name="error_empty_goal_name">Название не может быть пустым</string>
    <string name="goal_change_level">Сделать задачей</string>
    <string-array name="dialog_actions_with_task">
        <item>Изменить</item>
        <item>Удалить</item>
        <item>Вынести в отдельную цель</item>
    </string-array>
    <string-array name="dialog_delete_task">
        <item>Удалить всё</item>
        <item>Сохранить дочерние ветки</item>
    </string-array>
    <string name="change_action">Выберите действие</string>
    <string-array name="dialog_separate_target">
        <item>Дублировать новой целью</item>
        <item>Переместить с потомками</item>
        <item>Потомков оставить, саму задачу сделать целью</item>
    </string-array>
    <string name="choise_action_when_separate_target">Вынесение в отдельную цель</string>
    <string name="activity_goal_union_title">Выберите цель</string>
    <string name="toast_select_goal">Необходимо выбрать цель, чтобы продолжить</string>
    <string name="toast_union_goal">Необходимо минимум две цели</string>
    <string name="title_activity_help_cards">HelpCards</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>
