<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="downloadListVM" type="com.knobblochsapplication.app.modules.downloadlist.data.viewmodel.DownloadListVM"/>
    </data>

    <LinearLayout
        android:id="@+id/linearDownloadlist"
        style="@style/groupStylewhite_A700"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearHeader"
            style="@style/groupStyleindigo_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.83">

                <Button
                    android:id="@+id/button5"
                    style="@style/Widget.Material3.Button.IconButton.Filled"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:layout_weight="0.83"
                    app:icon="@drawable/img_arrowleft"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtText"
                    style="@style/txtABeeZeeregular20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.83"
                    android:ellipsize="end"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{downloadListVM.downloadListModel.txtText}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/msg2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtTextOne"
                style="@style/txtABeeZeeregular15_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="39dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="39dp"
                android:gravity="center_horizontal"
                android:text="@{downloadListVM.downloadListModel.txtTextOne}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/msg3" />

            <TextView
                android:id="@+id/txtTextFive"
                style="@style/txtABeeZeeregular15_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="39dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="39dp"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@{downloadListVM.downloadListModel.txtTextFive}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox2"
                tools:text="@string/msg4" />

            <CheckBox
                android:id="@+id/checkBox3"
                style="@style/txtABeeZeeregular18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="39dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="39dp"
                android:layoutDirection="rtl"
                android:text="@string/lbl8"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTextOne" />

            <CheckBox
                android:id="@+id/checkBox5"
                style="@style/txtABeeZeeregular18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="39dp"
                android:layout_marginEnd="39dp"
                android:layoutDirection="rtl"
                android:text="@string/lbl27"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

            <CheckBox
                android:id="@+id/checkBox2"
                style="@style/txtABeeZeeregular18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="39dp"
                android:layout_marginEnd="39dp"
                android:layoutDirection="rtl"
                android:text="@string/lbl28"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="39dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="39dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTextFive">

                <RadioButton
                    android:id="@+id/radioButton"
                    style="@style/txtABeeZeeregular18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layoutDirection="rtl"
                    android:text="@string/lbl11"
                    android:textAlignment="textStart" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    style="@style/txtABeeZeeregular18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layoutDirection="rtl"
                    android:text="@string/lbl12"
                    android:textAlignment="textStart" />

            </RadioGroup>

            <Button
                android:id="@+id/button6"
                style="@style/Widget.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="39dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="39dp"
                android:text="@string/lbl13"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>
