<?xml version="1.0" encoding="UTF-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="helpScreenOneVM"
            type="com.knobblochsapplication.app.modules.helpscreenone.data.viewmodel.HelpScreenOneVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_max="500dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_help1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/msg11"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintBottom_toTopOf="@+id/btn_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start"
            android:layout_width="227dp"
            android:layout_height="66dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/lbl26"
            android:layout_marginBottom="16dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>